RESOLVED FIXED 260287
[css-grid] css-grid/grid-items/grid-intrinsic-maximums.html failing
https://bugs.webkit.org/show_bug.cgi?id=260287
Summary [css-grid] css-grid/grid-items/grid-intrinsic-maximums.html failing
Sammy Gill
Reported 2023-08-16 13:19:28 PDT
css-grid/grid-items/grid-intrinsic-maximums.html is failing on WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-16 13:19:43 PDT
Sammy Gill
Comment 2 2024-08-21 15:44:28 PDT
EWS
Comment 3 2024-08-22 06:58:36 PDT
Committed 282616@main (7f781b9a5304): <https://commits.webkit.org/282616@main> Reviewed commits have been landed. Closing PR #32555 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.